--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -3,25 +3,7 @@
     padding: 0 20px;
   }
   
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: rgb(46, 209, 54);
-    color: white;
-    padding: 12px 20px;
-    font-size: 18px;
-  }
   
-  .navbar .menu span {
-    margin: 0 15px;
-    cursor: pointer;
-  }
-  
-  .logo {
-    font-weight: bold;
-    font-size: 24px;
-  }
   
   .welcome-msg {
     margin: 20px 0;
@@ -29,8 +11,10 @@
     color: #555;
   }
   
+  /* searching styles */
   .search-section {
-    
+    display: flex;
+    justify-content: center;
     position: relative;
     max-width: 600px;
     margin-bottom: 30px;
@@ -47,7 +31,7 @@
   }
   
   .search-input:focus {
-    border-color: #f60;
+    border-color: rgb(20, 223, 13);
   }
   
   .search-suggestions {
